<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/login_progress2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerInside"
        android:visibility="gone"
        app:lottie_fileName="cargando3.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <ProgressBar
        android:id="@+id/login_progress1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ancho_img_tablet"
                android:layout_gravity="top"
                android:layout_marginBottom="@dimen/borde_horizontal"
                android:contentDescription="@string/descripcion_img"
                android:padding="@dimen/bordeImg"
                android:src="@drawable/logo_tlaxcala" />

            <LinearLayout
                android:layout_width="@dimen/ancho_edittextuser_tablet"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                        android:drawableStart="@drawable/ic_user"
                        android:gravity="center"
                        android:hint="@string/hint_usuario"
                        android:inputType="textCapCharacters"
                        android:maxLength="18"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/ancho_edittextuser_tablet"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/bordeImg">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_pass"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/hint_contrasenia"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/ancho_edittextuser_tablet"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/borde">

                <CheckBox
                    android:id="@+id/rContrasenia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recordar_pass" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="@dimen/tamaño_btn_login"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/texto_login"
                android:textSize="@dimen/tamaño_letra_login" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>